# TI_Cup_SignalProcess

./: README.md
h743_MDK/: .mxproject  WindowsGeneration.m  h743_MDK.code-workspace  h743_hal.ioc
h743_MDK/App/: app_config.h  app_types.h
h743_MDK/App/comm/: hmi_comm.c  hmi_comm.h
h743_MDK/App/dds/: ad9910.c  ad9910.h  ad9959.c  ad9959.h
h743_MDK/App/fft/: fft_analyzer.c  fft_analyzer.h
h743_MDK/App/measure/: freq_measure.c  freq_measure.h
h743_MDK/App/task/: adc_task.c  adc_task.h
h743_MDK/App/utils/: delay.c  delay.h
h743_MDK/Core/Inc/: main.h  stm32h7xx_it.h
h743_MDK/Core/Src/: adc.c  gpio.c  main.c  stm32h7xx_it.c  tim.c  usart.c
h743_MDK/Drivers/CMSIS/DSP/: ARM.CMSIS-DSP.sha1
h743_MDK/Listening/: h743_hal.map
h743_MDK/MDK-ARM/: .clangd  h743_hal.cbuild-idx.yml  h743_hal.cbuild-pack.yml  h743_hal.cbuild-set.yml  h743_hal.cproject.yml  h743_hal.csolution.yml  h743_hal.uvguix.47306  h743_hal.uvoptx  h743_hal.uvprojx  sdsd  startup_stm32h743xx.lst
h743_MDK/MDK-ARM/RTE/_h743_hal/: RTE_Components.h
h743_MDK/MDK-ARM/h743_hal/: ad9910.crf  ad9910.d  ad9959.crf  ad9959.d  adc.crf  adc.d  adc_task.d  arm_bitreversal2_extra.crf  arm_bitreversal2_extra.d  arm_cfft_f32_extra.crf  arm_cfft_f32_extra.d  arm_cfft_init_f32_extra.crf  arm_cfft_init_f32_extra.d  arm_common_tables_extra.crf  arm_common_tables_extra.d  arm_const_structs_extra.crf  arm_const_structs_extra.d  arm_rfft_fast_f32_extra.crf  arm_rfft_fast_f32_extra.d  arm_rfft_fast_init_f32_extra.crf  arm_rfft_fast_init_f32_extra.d  delay.crf  delay.d  delay_1.d  dma.crf  dma.d  fft_analyzer.d  fftana.crf  fftana.d  freq_measure.d  get_freq.crf  get_freq.d  gpio.crf  gpio.d  h743_hal.axf  h743_hal.build_log.htm  h743_hal.hex  h743_hal.htm  h743_hal.lnp  h743_hal.map  (+66 more)
h743_MDK/MDK-ARM/tmp/: .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  roots.cmake
h743_MDK/MDK-ARM/tmp/1/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
h743_MDK/MDK-ARM/tmp/h743_hal+h743_hal/: CMakeLists.txt  groups.cmake  toolchain.cmake
h743_MDK/MDK-ARM/tmp/h743_hal+h743_hal/src/h743_hal+h743_hal-stamp/: h743_hal+h743_hal-configure-.cmake  h743_hal+h743_hal-database-.cmake  h743_hal+h743_hal-source_dirinfo.txt
h743_MDK/MDK-ARM/tmp/h743_hal+h743_hal/tmp/: h743_hal+h743_hal-cfgcmd.txt  h743_hal+h743_hal-mkdirs.cmake
h743_MDK/MyDrive/: AD9910.c  AD9910.h  AD9959.c  AD9959.h  Get_Freq.c  Get_Freq.h  HMI.c  HMI.h  ad9833.c  ad9833.h  bsp_system.h  delay.c  delay.h  global_types.h  sys.h
h743_MDK/SignalProcess/: fftana.c  fftana.h  hanning_window.h
h743_MDK/SignalProcess/long_fft/: arm_bitreversal2_extra.c  arm_const_structs_extra.c  extra_ffts.h
h743_MDK/Tasks/: Tasks.c  Tasks.h
h743_MDK/long_fft/: arm_cfft_f32_extra.c  arm_common_tables_extra.c  arm_common_tables_extra.h  arm_const_structs_extra.h  arm_rfft_fast_init_f32_extra.c
